objects/SKU__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopadoFamily__c</fullName>
        <label>CopadoFamily</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopadoGrouping__c</fullName>
        <label>CopadoGrouping</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ACV__c</fullName>
        <label>Opportunity ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quantity__c</fullName>
        <label>Opportunity Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rows__c</fullName>
        <label>Opportunity Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_ACV__c</fullName>
        <label>Subscription ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Quantity__c</fullName>
        <label>Subscription Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Rows__c</fullName>
        <label>Subscription Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SKU</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Opportunity_Quantity__c</columns>
        <columns>Opportunity_ACV__c</columns>
        <columns>Opportunity_Rows__c</columns>
        <columns>Subscription_Quantity__c</columns>
        <columns>Subscription_ACV__c</columns>
        <columns>Subscription_Rows__c</columns>
        <columns>CopadoFamily__c</columns>
        <columns>CopadoGrouping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>